--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.18.2",
     "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.11",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^22.4.2",
     "node-sass": "^4.7.2",
