--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "webpack",
     "watch": "webpack-dev-server",
     "test": "jest -i --coverage --verbose",
-    "start": "node index.js",
-    "heroku-postbuild": "webpack -p --progress"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "Melanie Downing",
