--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "webpack",
     "watch": "webpack-dev-server",
     "test": "jest -i --coverage --verbose",
-    "start": "node index.js"
+    "start": "node index.js",
+    "heroku-postbuild": "webpack -p --config ./webpack.prod.config.js --progress"
   },
   "keywords": [],
   "author": "Melanie Downing",
